--- a/README
+++ b/README
@@ -6,5 +6,5 @@ Thanks goes to:
     Chestr             - for the idea and released source of original spell_work
     TOM_RUS            - for code samples
     Shauren            - updating for TrinityCore
-    Armano             - updating for atlantiss
-    Zori               - updating for atlantiss
+    Armano
+    Zori
