Upgrade SpellWork to .NET 8 Based on https://github.com/Seyden/SpellWork/commit/b4f20c251632d59456eedb1ba644b075a95730f7

--- a/SpellWork/Forms/FormMain.resx
+++ b/SpellWork/Forms/FormMain.resx
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
+  <!--
     Microsoft ResX Schema 
-    
+
     Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
     associated with the data types.
-    
+
     Example:
-    
+
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-                
-    There are any number of "resheader" rows that contain simple 
+
+    There are any number of "resheader" rows that contain simple
     name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
     mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
     extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
     read any of the formats listed below.
-    
+
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
+    value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
+    value   : The object must be serialized into a byte array
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -128,67 +128,70 @@
   </metadata>
   <data name="_ilPro.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAY
-        DQAAAk1TRnQBSQFMAgEBBgEAAZQBAQGUAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wgAApg+AAGYAXcBmD0A
-        AZgCdwGYPAABmAF3AZ0BdwGYNAABnQh3Ap0BdwGYMwABdwLkB8ACnQF3AZgCABAWIAABdwGXAZ0IwAGd
-        AcABdwGYAQAQICAAAXcBlwOdB8ABnQHAAXcBmAIgDUcBICAAAXEClwOdCMABdwGYAiANRwEgIAABcQGX
-        AXcBlwOdBsABdwGdAQAQICAAAXEBlwF3A5cC5ATAAXcBnQIAEBYgAAGRA3EFdwLAAXcBnToAAZgBdwHk
-        AXcBnTsAAZgCdwGdPAABmAF3AZ09AAHvAZ07AAG8AbQBiwKGAYsBtAG8CAAB8AGXAU8BmAoAAfABbwHv
-        BgABBwFvAbwHAAHvBE8BmAgAAbQBhgatAYYBtAcAApcBfQFWAQcIAAHwAW8CRgHvBAABBwFFAUYBbgG8
-        BgABmARWAZgHAAGuBK0CtAHHAacCrQGuBQABlwFWAn0BeAGXBwAB8AFvAUYBbwHjAUYB7wIAAQcBRQEX
-        AkYBbgG8BQABmAFWAlUBVgGYBgABtAGtAeYDrQL/Aa0CxwKtAbQCAAHwAZcBVgR9AVYBmAYAAW8BRgJv
-        ARYB4wFGAe8BBwFGAW8ERgFvBQABmAJWAVUBVgGYBQABvAGGAdUB5gKtAc8C/wGtA8cBrQGGAbwB8AGX
-        AVYCeAR9AU8BvAUAAQcBRgJvAhYB4wJGAW8DRgEXAUUBBwUAAZgEVgGYBQABtAGtA+YBzgG0Av8CrQLH
-        AacBrQG0AZcBVgKXAX0BVQFWAn0BVgGYBgABBwFGAW8DFgLjAW8CRgEXAUUBBwEABZgBlwFWAZcCVgGX
-        BJgB7wGLAs8D5gG0Av8DrQLHAa0BiwFWAXgBlwF4AVUBBwGXAXgB5AF4AVUBBwYAAQcBRgHjAxYCbwFG
-        ARcBRgEHAgABVQWXAX0ClwF4BVYBTwGGAq0BzwLmAbQC/wHPA60BxwGtAYYBlwFWAXgBVQEHAQABBwFW
-        AX0BlwF4AZcB8AYAAQcBRgHjAhYDbwFGAQcDAAFVAXgBlwV9AeQClwJWAVUBVgFPAYYDrQHPAeYBtAL/
-        AbQFrQGGAbwBmAGXAbwDAASXAVYBmAYAAQcBRgHjAhYDbwFGAe8DAAFVAXgClwF4BH0B5AKXA1YBTwGL
-        BK0CzwL0Ac8FrQGLBwABvAFVAXgCVgFVAQcEAAEHAUYB4wMWAm8BRgEXAUYB7wIAAVUCVgOXBH0BlwRW
-        AU8BtAGtAacErQHPAbQC5gStAbQIAAHvAVYBlwJWAVUBvAIAAQcBRgFvAxYC4wFvAkYBFwFGAe8BAAWY
-        ApcCfQKXBZgBvAGGAa0BpwKtAc8C/wG0AuYCrQGGAbwJAAGXBFYBlwEAAQcBRgJvAhYB4wJGAW8DRgEX
-        AUYB7wUAAZgBlwF4AX0BlwGYBgABtAGtA6cBzwL/AbQC5gHVAa0BtAoAAfABlwRWAZgBbwFGAm8BFgHj
-        AUYCBwFGAW8ERgFvBQABmAFWA5cBmAYAAfABiwKtAqcCzwGtAc8B1QGtAYsB8AsAAbwBVQNWAVUB8ANv
-        AeMBRgEHAgABBwFGARcCRgFvAfAFAAGYAVYDlwGYBwAB8AG0AaYGrQGGAbQB8A0AAZgBVQJWAZcBAAHw
-        AW8CRgEHBAABBwJGAW8B8AYAAZgBVgJ4AZcBmAkAAQcBtAGLAoYBiwG0AQcQAAGYApcBvAIAAfABbwEH
-        BgABBwFvAfAHAAGYAVUCVgFVAZgFAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/
-        AQAB/gF/Av8EAAH+AT8C/wQAAf4BHwL/BAAB/gEPAv8FAAEHAv8FAAEDBwABARcAAQEHAAEDBwABBwL/
-        BAAB/gEPAv8EAAH+AR8C/wQAAf4BPwL/BAAB/gF/Av8EAAHwAQ8B8AH/AccB4wH4AR8B4AEHAfABfwGD
-        AcEB+AEfAcABAwHgAX8BAQGAAfgBHwGAAQEBgAE/AgAB+AEfAwABHwIAAfgBHwMAAR8BgAEBBQABDwHA
-        AQMEAAEEAQcB4AEHBAABDgEHAeABBwQAAf4BAwHAAQMEAAH/AQEBgAEBBAAB/wGBAgAB+AEfAYABAQH/
-        AYACAAH4AR8BgAEBAf8BwAEBAYAB+AEfAcABAwH/AeABgwHBAfgBHwHwAQ8B/wHwAccB4wH4AR8L
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAGA0AAAJNU0Z0AUkBTAIBAQYB
+        AAHsAQEB7AEBARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEgAwABAQEAAQgG
+        AAEIGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
+        AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
+        kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
+        MwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZAgABZgHMAgABZgH/AgAB
+        mQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFmAgABzAGZAgACzAIAAcwB
+        /wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEzAQABmQEAATMBAAHMAQAB
+        MwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFmAgABMwFmATMBAAEzAmYB
+        AAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFmAQABMwKZAQABMwGZAcwB
+        AAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEAATMBzAH/AQABMwH/ATMB
+        AAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFmAQABZgEAAWYBAAGZAQAB
+        ZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFmATMBzAEAAWYBMwH/AQAC
+        ZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFmAQABZgKZAQABZgGZAcwB
+        AAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEAAWYB/wIAAWYB/wEzAQAB
+        ZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZAQABmQEAAZkBAAHMAQAB
+        mQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEzAQABmQEzAWYBAAGZAWYB
+        mQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/AQABmQHMAgABmQHMATMB
+        AAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEAAZkBzAFmAQABmQH/AZkB
+        AAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHMAQABzAEAAZkBMwIAAcwC
+        MwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFmATMBAAGZAmYBAAHMAWYB
+        mQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZAQABzAGZAcwBAAHMAZkB
+        /wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/ATMBAAGZAf8BZgEAAcwB
+        /wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHMATMCAAH/AjMBAAH/ATMB
+        ZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJmAQAB/wFmAZkBAAH/AWYB
+        zAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHMAQAB/wGZAf8BAAH/AcwC
+        AAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEAAcwB/wFmAQAC/wGZAQAC
+        /wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEAASEBAAGlAQADXwEAA3cB
+        AAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7Af8BAAGkAqABAAOAAwAB
+        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8IAAKYPgABmAF3AZg9AAGYAncBmDwAAZgBdwGdAXcB
+        mDQAAZ0IdwKdAXcBmDMAAXcC5AfAAp0BdwGYAgAQFiAAAXcBlwGdCMABnQHAAXcBmAEAECAgAAF3AZcD
+        nQfAAZ0BwAF3AZgCIA1HASAgAAFxApcDnQjAAXcBmAIgDUcBICAAAXEBlwF3AZcDnQbAAXcBnQEAECAg
+        AAFxAZcBdwOXAuQEwAF3AZ0CABAWIAABkQNxBXcCwAF3AZ06AAGYAXcB5AF3AZ07AAGYAncBnTwAAZgB
+        dwGdPQAB7wGdOwABvAG0AYsChgGLAbQBvAgAAfABlwFPAZgKAAHwAW8B7wYAAQcBbwG8BwAB7wRPAZgI
+        AAG0AYYGrQGGAbQHAAKXAX0BVgEHCAAB8AFvAkYB7wQAAQcBRQFGAW4BvAYAAZgEVgGYBwABrgStArQB
+        xwGnAq0BrgUAAZcBVgJ9AXgBlwcAAfABbwFGAW8B4wFGAe8CAAEHAUUBFwJGAW4BvAUAAZgBVgJVAVYB
+        mAYAAbQBrQHmA60C/wGtAscCrQG0AgAB8AGXAVYEfQFWAZgGAAFvAUYCbwEWAeMBRgHvAQcBRgFvBEYB
+        bwUAAZgCVgFVAVYBmAUAAbwBhgHVAeYCrQHPAv8BrQPHAa0BhgG8AfABlwFWAngEfQFPAbwFAAEHAUYC
+        bwIWAeMCRgFvA0YBFwFFAQcFAAGYBFYBmAUAAbQBrQPmAc4BtAL/Aq0CxwGnAa0BtAGXAVYClwF9AVUB
+        VgJ9AVYBmAYAAQcBRgFvAxYC4wFvAkYBFwFFAQcBAAWYAZcBVgGXAlYBlwSYAe8BiwLPA+YBtAL/A60C
+        xwGtAYsBVgF4AZcBeAFVAQcBlwF4AeQBeAFVAQcGAAEHAUYB4wMWAm8BRgEXAUYBBwIAAVUFlwF9ApcB
+        eAVWAU8BhgKtAc8C5gG0Av8BzwOtAccBrQGGAZcBVgF4AVUBBwEAAQcBVgF9AZcBeAGXAfAGAAEHAUYB
+        4wIWA28BRgEHAwABVQF4AZcFfQHkApcCVgFVAVYBTwGGA60BzwHmAbQC/wG0Ba0BhgG8AZgBlwG8AwAE
+        lwFWAZgGAAEHAUYB4wIWA28BRgHvAwABVQF4ApcBeAR9AeQClwNWAU8BiwStAs8C9AHPBa0BiwcAAbwB
+        VQF4AlYBVQEHBAABBwFGAeMDFgJvAUYBFwFGAe8CAAFVAlYDlwR9AZcEVgFPAbQBrQGnBK0BzwG0AuYE
+        rQG0CAAB7wFWAZcCVgFVAbwCAAEHAUYBbwMWAuMBbwJGARcBRgHvAQAFmAKXAn0ClwWYAbwBhgGtAacC
+        rQHPAv8BtALmAq0BhgG8CQABlwRWAZcBAAEHAUYCbwIWAeMCRgFvA0YBFwFGAe8FAAGYAZcBeAF9AZcB
+        mAYAAbQBrQOnAc8C/wG0AuYB1QGtAbQKAAHwAZcEVgGYAW8BRgJvARYB4wFGAgcBRgFvBEYBbwUAAZgB
+        VgOXAZgGAAHwAYsCrQKnAs8BrQHPAdUBrQGLAfALAAG8AVUDVgFVAfADbwHjAUYBBwIAAQcBRgEXAkYB
+        bwHwBQABmAFWA5cBmAcAAfABtAGmBq0BhgG0AfANAAGYAVUCVgGXAQAB8AFvAkYBBwQAAQcCRgFvAfAG
+        AAGYAVYCeAGXAZgJAAEHAbQBiwKGAYsBtAEHEAABmAKXAbwCAAHwAW8BBwYAAQcBbwHwBwABmAFVAlYB
+        VQGYBQABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/wEAAf4BfwL/BAAB/gE/Av8E
+        AAH+AR8C/wQAAf4BDwL/BQABBwL/BQABAwcAAQEXAAEBBwABAwcAAQcC/wQAAf4BDwL/BAAB/gEfAv8E
+        AAH+AT8C/wQAAf4BfwL/BAAB8AEPAfAB/wHHAeMB+AEfAeABBwHwAX8BgwHBAfgBHwHAAQMB4AF/AQEB
+        gAH4AR8BgAEBAYABPwIAAfgBHwMAAR8CAAH4AR8DAAEfAYABAQUAAQ8BwAEDBAABBAEHAeABBwQAAQ4B
+        BwHgAQcEAAH+AQMBwAEDBAAB/wEBAYABAQQAAf8BgQIAAfgBHwGAAQEB/wGAAgAB+AEfAYABAQH/AcAB
+        AQGAAfgBHwHAAQMB/wHgAYMBwQH4AR8B8AEPAf8B8AHHAeMB+AEfCw==
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>92</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
